kustomize/overlays/test/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  # Аннотации удалены, чтобы не искажать пути запросов
spec:
  ingressClassName: nginx
  rules:
  - host: backend-test.task-tracker.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8000
